Feat: add dashboard page and pie chart

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,3 +1,26 @@
-<h1>Olympic games app</h1>
-<hr />
-<p>{{ (olympics$ | async)?.length }} data loaded</p>
+<main>
+  <h1>Medals per Country</h1>
+
+  <section class="flex w-full justify-center items-center flex-wrap gap-4">
+    <app-stat-card
+      label="Number of JOs"
+      [count]="(totalJOs$ | async) ?? 0"
+    />
+    <app-stat-card
+      label="Number of countries"
+      [count]="(countriesCount$ | async) ?? 0"
+    />
+  </section>
+
+  <section class="w-full h-96 md:h-96 lg:h-[450px] overflow-hidden">
+    @if (chartData$ | async; as data) {
+      @if (data && data.length > 0) {
+        <app-pie-chart [data]="data" />
+      } @else {
+        <div class="flex items-center justify-center h-full">
+          <p class="text-gray-500 text-lg">No data available</p>
+        </div>
+      }
+    }
+  </section>
+</main>
