--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,24 @@
-<router-outlet></router-outlet>
+<main>
+
+  @if (isLoading) {
+  <div class="flex flex-col justify-center items-center w-full h-full">
+    <div class="spinner"></div>
+    <p class="text-gray-500">loading</p>
+  </div>
+  }
+
+  @if(error && !isLoading){
+    <div class="flex flex-col justify-center items-center w-full h-full">
+      <p class="text-xl font-semibold mb-2">Error</p>
+      <p class="text-sm">{{ error }}</p>
+    </div>
+  }
+</main>
+
+
+@if(!error && !isLoading){
+  <router-outlet></router-outlet>
+}
+
+
+
