Feat: add details page and line chart

--- a/src/app/components/pie-chart/pie-chart.component.html
+++ b/src/app/components/pie-chart/pie-chart.component.html
@@ -1,14 +1,15 @@
-@if (data) {
-  <ngx-charts-pie-chart
-    [results]="data"
-    [labels]="showChartLabels"
-    (select)="onSelect($event)"
-  >
-    <ng-template #tooltipTemplate let-model="model">
-      <div class="text-lg px-4 py-2">
-        <p>{{ model.name }}</p>
-        <p>🏅 {{ model.value }}</p>
-      </div>
-    </ng-template>
-  </ngx-charts-pie-chart>
-}
+<ngx-charts-pie-chart
+  [results]="data"
+  [labels]="showChartLabels"
+  (select)="onSelect($event)"
+>
+  <ng-template #tooltipTemplate let-model="model">
+    <div class="flex flex-col items-center text-lg px-4 py-2">
+      <p>{{ model.name }}</p>
+      <p class="flex items-center gap-1">
+        <lucide-icon [img]="medal" class="w-4 h-4"></lucide-icon>
+        {{ model.value }}
+      </p>
+    </div>
+  </ng-template>
+</ngx-charts-pie-chart>
