--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,12 @@
 @if (isLoading) {
   <main>
-    <div class="flex flex-col justify-center items-center w-full h-full">
-      <div class="spinner"></div>
-      <p class="text-gray-500">loading</p>
-    </div>
+    <app-spinner/>
   </main>
-}
-
-@if (error && !isLoading) {
+} @else if (hasError) {
   <main>
-    <div class="flex flex-col justify-center items-center w-full h-full">
-      <p class="text-xl font-semibold mb-2">Error</p>
-      <p class="text-sm">{{ error }}</p>
-    </div>
+    <app-error-message [message]="errorMessage"/>
   </main>
-}
-
-@if (!error && !isLoading) {
+} @else {
   <router-outlet></router-outlet>
 }
 
