--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -1,42 +1,43 @@
 <main>
-
-  <nav class="self-start">
-    <a routerLink="/" class="inline-flex items-center text-gray-700 hover:text-gray-900">
-      <lucide-icon [img]="ArrowLeft" class="w-8 h-8"></lucide-icon>
-    </a>
-  </nav>
-
-  @if (countryData$ | async; as country) {
-    <h1>{{ country?.country || 'Country not found' }}</h1>
+  @if (isLoading) {
+    <app-spinner/>
+  } @else if (hasError) {
+    <app-error-message [message]="errorMessage"/>
   } @else {
-    <h1>Loading...</h1>
-  }
+    <!-- Nav -->
+    <nav class="absolute top-4 left-4">
+      <a routerLink="/" class="inline-flex items-center text-gray-700 hover:text-gray-900">
+        <lucide-icon [img]="ArrowLeft" class="w-8 h-8"></lucide-icon>
+      </a>
+    </nav>
 
-  <section class="flex w-full justify-center items-center flex-wrap gap-4">
-    <app-stat-card
-      label="Number of entries"
-      [count]="(entriesCount$ | async) ?? 0"
-    />
-    <app-stat-card
-      label="Total number medals"
-      [count]="(medalsCount$ | async) ?? 0"
-    />
+    <h1>{{ countryName }}</h1>
 
-    <app-stat-card
-      label="Total number of athletes"
-      [count]="(athletesCount$ | async) ?? 0"
-    />
-  </section>
+    <!-- Stats -->
+    <section class="flex w-full justify-center items-center flex-wrap gap-4">
+      <app-stat-card
+        label="Number of entries"
+        [count]="entriesCount"
+      />
+      <app-stat-card
+        label="Total number of medals"
+        [count]="medalsCount"
+      />
+      <app-stat-card
+        label="Total number of athletes"
+        [count]="athletesCount"
+      />
+    </section>
 
-  <section class="w-full h-96 md:h-96 lg:h-[450px] overflow-hidden">
-    @if (chartData$ | async; as data) {
-      @if (data && data.length > 0) {
-        <app-line-chart [data]="data"/>
+    <!-- Chart-->
+    <section class="w-full h-96 md:h-96 lg:h-[450px]">
+      @if (chartData && chartData.length > 0) {
+        <app-line-chart [data]="chartData"/>
       } @else {
         <div class="flex items-center justify-center h-full">
-          <p class="text-gray-500 text-lg">No data available</p>
+          <p class="text-gray-500 text-lg">No chart data available</p>
         </div>
       }
-    }
-  </section>
+    </section>
+  }
 </main>
