Feat: Refacto service, responsive and add readme

--- a/src/app/components/line-chart/line-chart.component.html
+++ b/src/app/components/line-chart/line-chart.component.html
@@ -4,7 +4,7 @@
   [yAxis]="yAxis"
   [xAxisLabel]="xAxisLabel"
   [scheme]="colorScheme"
-  [results]="data"
+  [results]="lineChartData"
 >
 
   <ng-template #tooltipTemplate let-model="model">
