--- a/src/app/components/pie-chart/pie-chart.component.html
+++ b/src/app/components/pie-chart/pie-chart.component.html
@@ -1,5 +1,5 @@
 <ngx-charts-pie-chart
-  [results]="data"
+  [results]="pieChartData"
   [labels]="showChartLabels"
   (select)="onSelect($event)"
 >
