--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -7,21 +7,23 @@
     <h1>Medals per Country</h1>
 
     <!-- Stats -->
-    <section class="flex w-full justify-center items-center flex-wrap gap-4">
+    <section class="flex flex-wrap gap-4 justify-center items-center w-full">
       <app-stat-card
+        class="w-full sm:w-auto"
         label="Number of JOs"
         [count]="JOsCount"
       />
       <app-stat-card
+        class="w-full sm:w-auto"
         label="Number of countries"
         [count]="countriesCount"
       />
     </section>
 
     <!-- Chart -->
-    <section class="w-full h-96 md:h-96 lg:h-[450px] overflow-hidden">
-      @if (chartData && chartData.length > 0) {
-        <app-pie-chart [data]="chartData"/>
+    <section class="w-full h-96 md:h-96 lg:h-[450px] ">
+      @if (olympics && olympics.length > 0) {
+        <app-pie-chart [olympics]="olympics"/>
       } @else {
         <div class="flex items-center justify-center h-full">
           <p class="text-gray-500 text-lg">No chart data available</p>
