--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,4 +1,11 @@
-<div class="center">
-  <h2>No corresponding page found</h2>
-  <a routerLink="">Go back</a>
-</div>
+<main>
+  <h1>404</h1>
+  <h2 class="text-xl text-gray-700 mb-6">No corresponding page found</h2>
+  <a
+    routerLink="/"
+    class="inline-block px-6 py-3 bg-gray-200 text-gray-800 rounded-lg hover:bg-gray-300 transition"
+  >
+    Go back home
+  </a>
+
+</main>
