--- a/src/app/components/pie-chart/pie-chart.component.html
+++ b/src/app/components/pie-chart/pie-chart.component.html
@@ -1,15 +1,15 @@
 <ngx-charts-pie-chart
-  [results]="pieChartData"
-  [labels]="showChartLabels"
-  (select)="onSelect($event)"
+        [results]="pieChartData"
+        [labels]="showChartLabels"
+        (select)="onSelectChart($event)"
 >
-  <ng-template #tooltipTemplate let-model="model">
-    <div class="flex flex-col items-center text-lg px-4 py-2">
-      <p>{{ model.name }}</p>
-      <p class="flex items-center gap-1">
-        <lucide-icon [img]="medal" class="w-4 h-4"></lucide-icon>
-        {{ model.value }}
-      </p>
-    </div>
-  </ng-template>
+    <ng-template #tooltipTemplate let-model="model">
+        <div class="flex flex-col items-center text-lg px-4 py-2">
+            <p>{{ model.name }}</p>
+            <p class="flex items-center gap-1">
+                <lucide-icon [img]="medal" class="w-4 h-4"></lucide-icon>
+                {{ model.value }}
+            </p>
+        </div>
+    </ng-template>
 </ngx-charts-pie-chart>
